Fix overlapping related links on header

--- a/source/assets/stylesheets/styles/_site_header.scss
+++ b/source/assets/stylesheets/styles/_site_header.scss
@@ -2,6 +2,7 @@
   background-color: $header-background-color;
   position: fixed;
   width: 100%;
+  z-index: 4;
 }
 
 .site-header--active-scroll {
